tests/rosetta/out/Java/cartesian-product-of-two-or-more-lists-3.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:32:53Z
// cartesian-product-of-two-or-more-lists-3.mochi
import java.util.*;

public class CartesianProductOfTwoOrMoreLists3 {
    static String listStr(List<Integer> xs) {
        String s = "[";
        int i = 0;
        while (i < xs.size()) {
            s = s + ((Number)String.valueOf(xs.get(i))).doubleValue();
            if (i < xs.size() - 1) {
                s = s + " ";
            }
            i = (int)(i + 1);
        }
        s = s + "]";
        return s;
    }
    static String llStr(List<List<Integer>> lst) {
        String s = "[";
        int i = 0;
        while (i < lst.size()) {
            s = s + ((Number)listStr(lst.get(i))).doubleValue();
            if (i < lst.size() - 1) {
                s = s + " ";
            }
            i = (int)(i + 1);
        }
        s = s + "]";
        return s;
    }
    static List<Integer> concat(List<Integer> a, List<Integer> b) {
        List<Integer> out = Arrays.asList();
        for (Integer v : a) {
            out.add(v);
        }
        for (Integer v : b) {
            out.add(v);
        }
        return out;
    }
    static List<List<Integer>> cartN(any lists) {
        if (Objects.equals(lists, null)) {
            return Arrays.asList();
        }
        List<List<Integer>> a = (List<List<Integer>>)lists;
        if (Objects.equals(a.size(), 0)) {
            return Arrays.asList(Arrays.asList());
        }
        List<List<Integer>> out = Arrays.asList();
        List<List<Integer>> rest = cartN(((List)a).subList(1, a.size()));
        for (List<Integer> x : (List<List<Integer>>)a.get(0)) {
            for (List<Integer> p : rest) {
                out.add(java.util.stream.Stream.concat(Arrays.asList(x).stream(), p.stream()).collect(java.util.stream.Collectors.toList()));
            }
        }
        return out;
    }
    static void main() {
        System.out.println(llStr(cartN(Arrays.asList(Arrays.asList(1, 2), Arrays.asList(3, 4)))));
        System.out.println(llStr(cartN(Arrays.asList(Arrays.asList(3, 4), Arrays.asList(1, 2)))));
        System.out.println(llStr(cartN(Arrays.asList(Arrays.asList(1, 2), Arrays.asList()))));
        System.out.println(llStr(cartN(Arrays.asList(Arrays.asList(), Arrays.asList(1, 2)))));
        System.out.println("");
        System.out.println("[");
        for (List<Integer> p : cartN(Arrays.asList(Arrays.asList(1776, 1789), Arrays.asList(7, 12), Arrays.asList(4, 14, 23), Arrays.asList(0, 1)))) {
            System.out.println(" " + listStr(p));
        }
        System.out.println("]");
        System.out.println(llStr(cartN(Arrays.asList(Arrays.asList(1, 2, 3), Arrays.asList(30), Arrays.asList(500, 100)))));
        System.out.println(llStr(cartN(Arrays.asList(Arrays.asList(1, 2, 3), Arrays.asList(), Arrays.asList(500, 100)))));
        System.out.println("");
        System.out.println(llStr(cartN(null)));
        System.out.println(llStr(cartN(Arrays.asList())));
    }
    static <T> List<T> append(List<T> list, T item) {
        List<T> res = new ArrayList<>(list);
        res.add(item);
        return res;
    }
    public static void main(String[] args) {
    main();
    }
}
